tests/errors/wrong-args-forward-decl.au
b(1,2,3);

def b() {}